--- a/config/bibliography.bib
+++ b/config/bibliography.bib
@@ -24,74 +24,74 @@
 # during execution of device straining benchmarks and comparison of Intel RAPL and NVIDIA NVML
 # measurements results with the external power meters.
 # Used in "state-of-the-art" chapter, as the first article mentioned
-@Article{State_of_the_Art_Article_1,
-AUTHOR = {Fahad, Muhammad and Shahid, Arsalan and Manumachu, Ravi Reddy and Lastovetsky, Alexey},
-TITLE = {A Comparative Study of Methods for Measurement of Energy of Computing},
-JOURNAL = {Energies},
-VOLUME = {12},
-YEAR = {2019},
-NUMBER = {11},
-ARTICLE-NUMBER = {2204},
-URL = {https://www.mdpi.com/1996-1073/12/11/2204},
-ISSN = {1996-1073},
-ABSTRACT = {Energy of computing is a serious environmental concern and mitigating it is an important technological challenge. Accurate measurement of energy consumption during an application execution is key to application-level energy minimization techniques. There are three popular approaches to providing it: (a) System-level physical measurements using external power meters; (b) Measurements using on-chip power sensors and (c) Energy predictive models. In this work, we present a comprehensive study comparing the accuracy of state-of-the-art on-chip power sensors and energy predictive models against system-level physical measurements using external power meters, which we consider to be the ground truth. We show that the average error of the dynamic energy profiles obtained using on-chip power sensors can be as high as 73\% and the maximum reaches 300\% for two scientific applications, matrix-matrix multiplication and 2D fast Fourier transform for a wide range of problem sizes. The applications are executed on three modern Intel multicore CPUs, two Nvidia GPUs and an Intel Xeon Phi accelerator. The average error of the energy predictive models employing performance monitoring counters (PMCs) as predictor variables can be as high as 32\% and the maximum reaches 100\% for a diverse set of seventeen benchmarks executed on two Intel multicore CPUs (one Haswell and the other Skylake). We also demonstrate that using inaccurate energy measurements provided by on-chip sensors for dynamic energy optimization can result in significant energy losses up to 84\%. We show that, owing to the nature of the deviations of the energy measurements provided by on-chip sensors from the ground truth, calibration can not improve the accuracy of the on-chip sensors to an extent that can allow them to be used in optimization of applications for dynamic energy. Finally, we present the lessons learned, our recommendations for the use of on-chip sensors and energy predictive models and future directions.},
-DOI = {10.3390/en12112204}
+@article{State_of_the_Art_Article_1,
+  author         = {Fahad, Muhammad and Shahid, Arsalan and Manumachu, Ravi Reddy and Lastovetsky, Alexey},
+  title          = {A Comparative Study of Methods for Measurement of Energy of Computing},
+  journal        = {Energies},
+  volume         = {12},
+  year           = {2019},
+  number         = {11},
+  article-number = {2204},
+  url            = {https://www.mdpi.com/1996-1073/12/11/2204},
+  issn           = {1996-1073},
+  abstract       = {Energy of computing is a serious environmental concern and mitigating it is an important technological challenge. Accurate measurement of energy consumption during an application execution is key to application-level energy minimization techniques. There are three popular approaches to providing it: (a) System-level physical measurements using external power meters; (b) Measurements using on-chip power sensors and (c) Energy predictive models. In this work, we present a comprehensive study comparing the accuracy of state-of-the-art on-chip power sensors and energy predictive models against system-level physical measurements using external power meters, which we consider to be the ground truth. We show that the average error of the dynamic energy profiles obtained using on-chip power sensors can be as high as 73\% and the maximum reaches 300\% for two scientific applications, matrix-matrix multiplication and 2D fast Fourier transform for a wide range of problem sizes. The applications are executed on three modern Intel multicore CPUs, two Nvidia GPUs and an Intel Xeon Phi accelerator. The average error of the energy predictive models employing performance monitoring counters (PMCs) as predictor variables can be as high as 32\% and the maximum reaches 100\% for a diverse set of seventeen benchmarks executed on two Intel multicore CPUs (one Haswell and the other Skylake). We also demonstrate that using inaccurate energy measurements provided by on-chip sensors for dynamic energy optimization can result in significant energy losses up to 84\%. We show that, owing to the nature of the deviations of the energy measurements provided by on-chip sensors from the ground truth, calibration can not improve the accuracy of the on-chip sensors to an extent that can allow them to be used in optimization of applications for dynamic energy. Finally, we present the lessons learned, our recommendations for the use of on-chip sensors and energy predictive models and future directions.},
+  doi            = {10.3390/en12112204}
 }
 
 # Second major article, being a backbone of this Master Thesis
 # Used in "state-of-the-art" chapter, as the second article mentioned
 @inproceedings{State_of_the_Art_Article_2,
-author = {Arafa, Yehia and ElWazir, Ammar and ElKanishy, Abdelrahman and Aly, Youssef and Elsayed, Ayatelrahman and Badawy, Abdel-Hameed and Chennupati, Gopinath and Eidenbenz, Stephan and Santhi, Nandakishore},
-title = {Verified Instruction-Level Energy Consumption Measurement for NVIDIA GPUs},
-year = {2020},
-isbn = {9781450379564},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-url = {https://doi.org/10.1145/3387902.3392613},
-doi = {10.1145/3387902.3392613},
-abstract = {GPUs are prevalent in modern computing systems at all scales. They consume a significant fraction of the energy in these systems. However, vendors do not publish the actual cost of the power/energy overhead of their internal microarchitecture. In this paper, we accurately measure the energy consumption of various PTX instructions found in modern NVIDIA GPUs. We provide an exhaustive comparison of more than 40 instructions for four high-end NVIDIA GPUs from four different generations (Maxwell, Pascal, Volta, and Turing). Furthermore, we show the effect of the CUDA compiler optimizations on the energy consumption of each instruction. We use three different software techniques to read the GPU on-chip power sensors, which use NVIDIA's NVML API and provide an in-depth comparison between these techniques. Additionally, we verified the software measurement techniques against a custom-designed hardware power measurement. The results show that Volta GPUs have the best energy efficiency of all the other generations for the different categories of the instructions. This work should aid in understanding NVIDIA GPUs' microarchitecture. It should also make energy measurements of any GPU kernel both efficient and accurate.},
-booktitle = {Proceedings of the 17th ACM International Conference on Computing Frontiers},
-pages = {60–70},
-numpages = {11},
-keywords = {PTX, NVML, internal power sensors, external power meters, GPU power usage, PAPI},
-location = {Catania, Sicily, Italy},
-series = {CF '20}
+  author    = {Arafa, Yehia and ElWazir, Ammar and ElKanishy, Abdelrahman and Aly, Youssef and Elsayed, Ayatelrahman and Badawy, Abdel-Hameed and Chennupati, Gopinath and Eidenbenz, Stephan and Santhi, Nandakishore},
+  title     = {Verified Instruction-Level Energy Consumption Measurement for NVIDIA GPUs},
+  year      = {2020},
+  isbn      = {9781450379564},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {https://doi.org/10.1145/3387902.3392613},
+  doi       = {10.1145/3387902.3392613},
+  abstract  = {GPUs are prevalent in modern computing systems at all scales. They consume a significant fraction of the energy in these systems. However, vendors do not publish the actual cost of the power/energy overhead of their internal microarchitecture. In this paper, we accurately measure the energy consumption of various PTX instructions found in modern NVIDIA GPUs. We provide an exhaustive comparison of more than 40 instructions for four high-end NVIDIA GPUs from four different generations (Maxwell, Pascal, Volta, and Turing). Furthermore, we show the effect of the CUDA compiler optimizations on the energy consumption of each instruction. We use three different software techniques to read the GPU on-chip power sensors, which use NVIDIA's NVML API and provide an in-depth comparison between these techniques. Additionally, we verified the software measurement techniques against a custom-designed hardware power measurement. The results show that Volta GPUs have the best energy efficiency of all the other generations for the different categories of the instructions. This work should aid in understanding NVIDIA GPUs' microarchitecture. It should also make energy measurements of any GPU kernel both efficient and accurate.},
+  booktitle = {Proceedings of the 17th ACM International Conference on Computing Frontiers},
+  pages     = {60–70},
+  numpages  = {11},
+  keywords  = {PTX, NVML, internal power sensors, external power meters, GPU power usage, PAPI},
+  location  = {Catania, Sicily, Italy},
+  series    = {CF '20}
 }
 
 # Third major article
 # Used in "state-of-the-art" chapter, as the third article mentioned
 @inproceedings{State_of_the_Art_Article_3,
-author = {Burtscher, Martin and Zecena, Ivan and Zong, Ziliang},
-title = {Measuring GPU Power with the K20 Built-in Sensor},
-year = {2014},
-isbn = {9781450327664},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-url = {https://doi.org/10.1145/2588768.2576783},
-doi = {10.1145/2588768.2576783},
-abstract = {GPU-accelerated programs are becoming increasingly common in HPC, personal computers, and even handheld devices, making it important to optimize their energy efficiency. However, accurately profiling the power consumption of GPU code is not straightforward. In fact, we have identified multiple anomalies when using the on-board power sensor of K20 GPUs. For example, we have found that doubling a kernel's runtime more than doubles its energy usage, that kernels consume energy after they have stopped executing, and that running two kernels in close temporal proximity inflates the energy consumption of the later kernel. Moreover, we have observed that the power sampling frequency varies greatly and that the GPU sensor only performs power readings once in a while. We present a methodology to accurately compute the instant power and the energy consumption despite these issues.},
-booktitle = {Proceedings of Workshop on General Purpose Processing Using GPUs},
-pages = {28–36},
-numpages = {9},
-keywords = {Power measurement, GPU power sensor, energy measurement},
-location = {Salt Lake City, UT, USA},
-series = {GPGPU-7}
+  author    = {Burtscher, Martin and Zecena, Ivan and Zong, Ziliang},
+  title     = {Measuring GPU Power with the K20 Built-in Sensor},
+  year      = {2014},
+  isbn      = {9781450327664},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {https://doi.org/10.1145/2588768.2576783},
+  doi       = {10.1145/2588768.2576783},
+  abstract  = {GPU-accelerated programs are becoming increasingly common in HPC, personal computers, and even handheld devices, making it important to optimize their energy efficiency. However, accurately profiling the power consumption of GPU code is not straightforward. In fact, we have identified multiple anomalies when using the on-board power sensor of K20 GPUs. For example, we have found that doubling a kernel's runtime more than doubles its energy usage, that kernels consume energy after they have stopped executing, and that running two kernels in close temporal proximity inflates the energy consumption of the later kernel. Moreover, we have observed that the power sampling frequency varies greatly and that the GPU sensor only performs power readings once in a while. We present a methodology to accurately compute the instant power and the energy consumption despite these issues.},
+  booktitle = {Proceedings of Workshop on General Purpose Processing Using GPUs},
+  pages     = {28–36},
+  numpages  = {9},
+  keywords  = {Power measurement, GPU power sensor, energy measurement},
+  location  = {Salt Lake City, UT, USA},
+  series    = {GPGPU-7}
 }
 
 # NAS Parallel Benchmarks Article
 # 
-@Inbook{NPB,
-author="Bailey, David H.",
-editor="Padua, David",
-title="NAS Parallel Benchmarks",
-bookTitle="Encyclopedia of Parallel Computing",
-year="2011",
-publisher="Springer US",
-address="Boston, MA",
-pages="1254--1259",
-isbn="978-0-387-09766-4",
-doi="10.1007/978-0-387-09766-4_133",
-url="https://doi.org/10.1007/978-0-387-09766-4_133"
+@inbook{NPB,
+  author    = {Bailey, David H.},
+  editor    = {Padua, David},
+  title     = {NAS Parallel Benchmarks},
+  booktitle = {Encyclopedia of Parallel Computing},
+  year      = {2011},
+  publisher = {Springer US},
+  address   = {Boston, MA},
+  pages     = {1254--1259},
+  isbn      = {978-0-387-09766-4},
+  doi       = {10.1007/978-0-387-09766-4_133},
+  url       = {https://doi.org/10.1007/978-0-387-09766-4_133}
 }
 
 # NPB-CPP Article
@@ -210,77 +210,77 @@ url="https://doi.org/10.1007/978-0-387-09766-4_133"
   abstract = {Energy consumption is one of the top challenges for achieving the next generation of supercomputing. Codesign of hardware and software is critical for improving energy efficiency (EE) for future large-scale systems. Many architectural power-saving techniques have been developed, and most hardware components are approaching physical limits. Accordingly, parallel computing software, including both applications and systems, should exploit power-saving hardware innovations and manage efficient energy use. In addition, new power-aware parallel computing methods are essential to decrease energy usage further. This article surveys software-based methods that aim to improve EE for parallel computing. It reviews the methods that exploit the characteristics of parallel scientific applications, including load imbalance and mixed precision of floating-point (FP) calculations, to improve EE. In addition, this article summarizes widely used methods to improve power usage at different granularities, such as the whole system and per application. In particular, it describes the most important techniques to measure and to achieve energy-efficient usage of various parallel computing facilities, including processors, memories, and networks. Overall, this article reviews the state-of-the-art of energy-efficient methods for parallel computing to motivate researchers to achieve optimal parallel computing under a power budget constraint.}
 }
 
-@ARTICLE{Power_Management_on_Intel_Microprocessor,
-  author={Rotem, Efraim and Naveh, Alon and Ananthakrishnan, Avinash and Weissmann, Eliezer and Rajwan, Doron},
-  journal={IEEE Micro}, 
-  title={Power-Management Architecture of the Intel Microarchitecture Code-Named Sandy Bridge}, 
-  year={2012},
-  volume={32},
-  number={2},
-  pages={20-27},
-  abstract={Modern microprocessors are evolving into system-on-a-chip designs with high integration levels, catering to ever-shrinking form factors. Portability without compromising performance is a driving market need. An architectural approach that's adaptive to and cognizant of workload behavior and platform physical constraints is indispensable to meeting these performance and efficiency goals. This article describes power-management innovations introduced on Intel's Sandy Bridge microprocessor.},
-  keywords={Research_Paper},
-  doi={10.1109/MM.2012.12},
-  ISSN={1937-4143},
-  month={March}
+@article{Power_Management_on_Intel_Microprocessor,
+  author   = {Rotem, Efraim and Naveh, Alon and Ananthakrishnan, Avinash and Weissmann, Eliezer and Rajwan, Doron},
+  journal  = {IEEE Micro},
+  title    = {Power-Management Architecture of the Intel Microarchitecture Code-Named Sandy Bridge},
+  year     = {2012},
+  volume   = {32},
+  number   = {2},
+  pages    = {20-27},
+  abstract = {Modern microprocessors are evolving into system-on-a-chip designs with high integration levels, catering to ever-shrinking form factors. Portability without compromising performance is a driving market need. An architectural approach that's adaptive to and cognizant of workload behavior and platform physical constraints is indispensable to meeting these performance and efficiency goals. This article describes power-management innovations introduced on Intel's Sandy Bridge microprocessor.},
+  keywords = {Research_Paper},
+  doi      = {10.1109/MM.2012.12},
+  issn     = {1937-4143},
+  month    = {March}
 }
 
-@INPROCEEDINGS{RAPL_Power_Estimation_and_Capping,
-  author={David, Howard and Gorbatov, Eugene and Hanebutte, Ulf R. and Khanna, Rahul and Le, Christian},
-  booktitle={2010 ACM/IEEE International Symposium on Low-Power Electronics and Design (ISLPED)}, 
-  title={RAPL: Memory power estimation and capping}, 
-  year={2010},
-  volume={},
-  number={},
-  pages={189-194},
-  abstract={The drive for higher performance and energy efficiency in data-centers has influenced trends toward increased power and cooling requirements in the facilities. Since enterprise servers rarely operate at their peak capacity, efficient power capping is deemed as a critical component of modern enterprise computing environments. In this paper we propose a new power measurement and power limiting architecture for main memory. Specifically, we describe a new approach for measuring memory power and demonstrate its applicability to a novel power limiting algorithm. We implement and evaluate our approach in the modern servers and show that we achieve up to 40\% lower performance impact when compared to the state-of-art baseline across the power limiting range.},
-  keywords={Research_Paper},
-  doi={10.1145/1840845.1840883},
-  ISSN={},
-  month={Aug}
+@inproceedings{RAPL_Power_Estimation_and_Capping,
+  author    = {David, Howard and Gorbatov, Eugene and Hanebutte, Ulf R. and Khanna, Rahul and Le, Christian},
+  booktitle = {2010 ACM/IEEE International Symposium on Low-Power Electronics and Design (ISLPED)},
+  title     = {RAPL: Memory power estimation and capping},
+  year      = {2010},
+  volume    = {},
+  number    = {},
+  pages     = {189-194},
+  abstract  = {The drive for higher performance and energy efficiency in data-centers has influenced trends toward increased power and cooling requirements in the facilities. Since enterprise servers rarely operate at their peak capacity, efficient power capping is deemed as a critical component of modern enterprise computing environments. In this paper we propose a new power measurement and power limiting architecture for main memory. Specifically, we describe a new approach for measuring memory power and demonstrate its applicability to a novel power limiting algorithm. We implement and evaluate our approach in the modern servers and show that we achieve up to 40\% lower performance impact when compared to the state-of-art baseline across the power limiting range.},
+  keywords  = {Research_Paper},
+  doi       = {10.1145/1840845.1840883},
+  issn      = {},
+  month     = {Aug}
 }
 
 # [I need to check exact contents of this article and it's
 # usefulness as a reference]
 # Used in "state-of-the-art" chapter, first article
 @article{Implementation_for_Accelerator_Kernels,
-author = {Khaleghzadeh, Hamidreza and Zhong, Ziming and Reddy, Ravi and Lastovetsky, Alexey},
-title = {Out-of-Core Implementation for Accelerator Kernels on Heterogeneous Clouds},
-year = {2018},
-issue_date = {February  2018},
-publisher = {Kluwer Academic Publishers},
-address = {USA},
-volume = {74},
-number = {2},
-issn = {0920-8542},
-url = {https://doi.org/10.1007/s11227-017-2141-4},
-doi = {10.1007/s11227-017-2141-4},
-abstract = {Cloud environments today are increasingly featuring hybrid nodes containing multicore CPU processors and a diverse mix of accelerators such as Graphics Processing Units (GPUs), Intel Xeon Phi co-processors, and Field-Programmable Gate Arrays (FPGAs) to facilitate easier migration to them of HPC workloads. While virtualization of accelerators in clouds is a leading research challenge, we address the programming challenges that assail execution of large instances of data-parallel applications using these accelerators in this paper. In a typical hybrid node in a cloud, the tight integration of accelerators with multicore CPUs via PCI-E communication links contains inherent limitations such as limited main memory of accelerators and limited bandwidth of the PCI-E communication links. These limitations poses formidable programming challenges to execution of large problem sizes on these accelerators. In this paper, we describe a library containing interfaces (HCLOOC) that addresses these challenges. It employs optimal software pipelines to overlap data transfers between host CPU and the accelerator and computations on the accelerator. It is designed using the fundamental building blocks, which are OpenCL command queues for FPGAs, Intel offload streams for Intel Xeon Phis, and CUDA streams and events that allow concurrent utilization of the copy and execution engines provided in NVidia GPUs. We elucidate the key features of our library using an out-of-core implementation of matrix multiplication of large dense matrices on a hybrid node, an Intel Haswell multicore CPU server hosting three accelerators that includes NVidia K40c GPU, Intel Xeon Phi 3120P, and a Xilinx FPGA. Based on experiments with the GPU, we show that our out-of-core implementation achieves 82\% of peak double-precision floating performance of the GPU and a speedup of 2.7 times over the NVidia's out-of-core matrix multiplication implementation (CUBLAS-XT). We also demonstrate that our implementation exhibits 0\% drop in performance when the problem size exceeds the main memory of the GPU. We observe this 0\% drop also for our implementation for Intel Xeon Phi and Xilinx FPGA.},
-journal = {J. Supercomput.},
-month = {feb},
-pages = {551–568},
-numpages = {18},
-keywords = {Intel MKL, Heterogeneous clouds, CUDA, Intel Xeon Phi, GPU, CUBLAS, Matrix multiplication, Out-of-core}
+  author     = {Khaleghzadeh, Hamidreza and Zhong, Ziming and Reddy, Ravi and Lastovetsky, Alexey},
+  title      = {Out-of-Core Implementation for Accelerator Kernels on Heterogeneous Clouds},
+  year       = {2018},
+  issue_date = {February  2018},
+  publisher  = {Kluwer Academic Publishers},
+  address    = {USA},
+  volume     = {74},
+  number     = {2},
+  issn       = {0920-8542},
+  url        = {https://doi.org/10.1007/s11227-017-2141-4},
+  doi        = {10.1007/s11227-017-2141-4},
+  abstract   = {Cloud environments today are increasingly featuring hybrid nodes containing multicore CPU processors and a diverse mix of accelerators such as Graphics Processing Units (GPUs), Intel Xeon Phi co-processors, and Field-Programmable Gate Arrays (FPGAs) to facilitate easier migration to them of HPC workloads. While virtualization of accelerators in clouds is a leading research challenge, we address the programming challenges that assail execution of large instances of data-parallel applications using these accelerators in this paper. In a typical hybrid node in a cloud, the tight integration of accelerators with multicore CPUs via PCI-E communication links contains inherent limitations such as limited main memory of accelerators and limited bandwidth of the PCI-E communication links. These limitations poses formidable programming challenges to execution of large problem sizes on these accelerators. In this paper, we describe a library containing interfaces (HCLOOC) that addresses these challenges. It employs optimal software pipelines to overlap data transfers between host CPU and the accelerator and computations on the accelerator. It is designed using the fundamental building blocks, which are OpenCL command queues for FPGAs, Intel offload streams for Intel Xeon Phis, and CUDA streams and events that allow concurrent utilization of the copy and execution engines provided in NVidia GPUs. We elucidate the key features of our library using an out-of-core implementation of matrix multiplication of large dense matrices on a hybrid node, an Intel Haswell multicore CPU server hosting three accelerators that includes NVidia K40c GPU, Intel Xeon Phi 3120P, and a Xilinx FPGA. Based on experiments with the GPU, we show that our out-of-core implementation achieves 82\% of peak double-precision floating performance of the GPU and a speedup of 2.7 times over the NVidia's out-of-core matrix multiplication implementation (CUBLAS-XT). We also demonstrate that our implementation exhibits 0\% drop in performance when the problem size exceeds the main memory of the GPU. We observe this 0\% drop also for our implementation for Intel Xeon Phi and Xilinx FPGA.},
+  journal    = {J. Supercomput.},
+  month      = {feb},
+  pages      = {551–568},
+  numpages   = {18},
+  keywords   = {Intel MKL, Heterogeneous clouds, CUDA, Intel Xeon Phi, GPU, CUBLAS, Matrix multiplication, Out-of-core}
 }
 
 @book{Intel_Xeon_Phi_Coprocessor_Architecture,
-	author = {Rahman, Rezaur. and SpringerLink (Online service)},
-	title = {Intel® Xeon Phi™ Coprocessor Architecture and Tools},
-	publisher = {Apress :},
-	year = {2013.},
-	address = {Berkeley, CA :},
-  keywords = {Research_Paper},
-	url = {https://doi.org/10.1007/978-1-4302-5927-5}
+  author    = {Rahman, Rezaur. and SpringerLink (Online service)},
+  title     = {Intel® Xeon Phi™ Coprocessor Architecture and Tools},
+  publisher = {Apress :},
+  year      = {2013.},
+  address   = {Berkeley, CA :},
+  keywords  = {Research_Paper},
+  url       = {https://doi.org/10.1007/978-1-4302-5927-5}
 }
 
 # ===== EXTERNAL LINKS =====
 
 @link{NASA_Advanced_Supercomputing,
-author = {NASA},
-title = {NAS Parallel Benchmarks},
-keywords = {Useful_Link},
-url = {https://www.nas.nasa.gov/software/npb.html},
-abstract = {The NAS Parallel Benchmarks (NPB) are a small set of programs designed to help evaluate the performance of parallel supercomputers. The benchmarks are derived from computational fluid dynamics (CFD) applications and consist of five kernels and three pseudo-applications in the original "pencil-and-paper" specification (NPB 1). The benchmark suite has been extended to include new benchmarks for unstructured adaptive meshes, parallel I/O, multi-zone applications, and computational grids. Problem sizes in NPB are predefined and indicated as different classes. Reference implementations of NPB are available in commonly-used programming models like MPI and OpenMP (NPB 2 and NPB 3).}
+  author   = {NASA},
+  title    = {NAS Parallel Benchmarks},
+  keywords = {Useful_Link},
+  url      = {https://www.nas.nasa.gov/software/npb.html},
+  abstract = {The NAS Parallel Benchmarks (NPB) are a small set of programs designed to help evaluate the performance of parallel supercomputers. The benchmarks are derived from computational fluid dynamics (CFD) applications and consist of five kernels and three pseudo-applications in the original "pencil-and-paper" specification (NPB 1). The benchmark suite has been extended to include new benchmarks for unstructured adaptive meshes, parallel I/O, multi-zone applications, and computational grids. Problem sizes in NPB are predefined and indicated as different classes. Reference implementations of NPB are available in commonly-used programming models like MPI and OpenMP (NPB 2 and NPB 3).}
 }
 
 # Link to GitHub repository with software used for controlling the Yokogawa WT310E Power Meter
@@ -317,68 +317,70 @@ abstract = {The NAS Parallel Benchmarks (NPB) are a small set of programs design
   author   = {Yokogawa},
   title    = {WT300E Digital Power Analyzer},
   keywords = {Useful_Link},
-  url = {https://tmi.yokogawa.com/solutions/products/power-analyzers/digital-power-meter-wt300e/#Documents-Downloads}
+  url      = {https://tmi.yokogawa.com/solutions/products/power-analyzers/digital-power-meter-wt300e/#Documents-Downloads}
 }
 
 @link{Yokogawa_Meter_Series_Specifications,
-author = {Yokogawa},
-title = {WT300E Series Digital Power Meter},
-keywords = {Useful_Link},
-url = {https://cdn.tmi.yokogawa.com/1/2562/files/BUWT300E-01EN.pdf}
+  author   = {Yokogawa},
+  title    = {WT300E Series Digital Power Meter},
+  keywords = {Useful_Link},
+  url      = {https://cdn.tmi.yokogawa.com/1/2562/files/BUWT300E-01EN.pdf}
 }
 
 @link{NVML_Reference_Manual,
-author = {NVIDIA},
-title = {NVML API Reference Guide},
-keywords  = {Useful_Link},
-url = {https://docs.nvidia.com/deploy/nvml-api/index.html}
+  author   = {NVIDIA},
+  title    = {NVML API Reference Guide},
+  keywords = {Useful_Link},
+  url      = {https://docs.nvidia.com/deploy/nvml-api/index.html}
 }
 
 @link{Intel_Xeon_Phi_Coprocessor_Developer,
-author = {Intel},
-title = {Intel® Xeon Phi™ Coprocessor DEVELOPER'S QUICK START GUIDE},
-keywords = {Useful_Link},
-url = {https://www.intel.com/content/dam/develop/external/us/en/documents/intel-xeon-phi-coprocessor-quick-start-developers-guide.pdf}
+  author   = {Intel},
+  title    = {Intel® Xeon Phi™ Coprocessor DEVELOPER'S QUICK START GUIDE},
+  keywords = {Useful_Link},
+  url      = {https://www.intel.com/content/dam/develop/external/us/en/documents/intel-xeon-phi-coprocessor-quick-start-developers-guide.pdf}
 }
 
 @link{NVIDIA_SMI,
-author = {NVIDIA},
-title = {System Management Interface SMI},
-keywords = {Useful_Link},
-url = {https://developer.nvidia.com/nvidia-system-management-interface}
+  author   = {NVIDIA},
+  title    = {System Management Interface SMI},
+  keywords = {Useful_Link},
+  url      = {https://developer.nvidia.com/nvidia-system-management-interface}
 }
 
 @link{PAPI_CUDA,
-author = {NVIDIA},
-title = {PAPI CUDA Component},
-keywords = {Useful_Link},
-url = {https://developer.nvidia.com/papi-cuda-component}
+  author   = {NVIDIA},
+  title    = {PAPI CUDA Component},
+  keywords = {Useful_Link},
+  url      = {https://developer.nvidia.com/papi-cuda-component}
 }
 
 @link{Pthreads,
-  author = {Michael Kerrisk},
-  title = {Pthreads - Linux manual page},
+  author   = {Michael Kerrisk},
+  title    = {Pthreads - Linux manual page},
   keywords = {Useful_Link},
-  url = {https://man7.org/linux/man-pages/man7/pthreads.7.html}
+  url      = {https://man7.org/linux/man-pages/man7/pthreads.7.html}
 }
 
 @link{OpenMP,
-  author = {OpenMP},
-  title = {OpenMP Reference Guides},
+  author   = {OpenMP},
+  title    = {OpenMP Reference Guides},
   keywords = {Useful_Link},
-  url = {https://www.openmp.org/resources/refguides/}
+  url      = {https://www.openmp.org/resources/refguides/}
 }
 
-@link{
-  author = {},
-  title = {},
+@link{,
+  author   = {},
+  title    = {},
   keywords = {Useful_Link},
-  url = {}
+  url      = {}
 }
 
-@link{
-  author = {},
-  title = {},
+@link{,
+  author   = {},
+  title    = {},
   keywords = {Useful_Link},
-  url = {}
+  url      = {}
 }
+
+# Yurika says hi!
