--- a/config/preamble.sty
+++ b/config/preamble.sty
@@ -63,7 +63,7 @@
 % Setup biblatex for bibliography
 \usepackage{csquotes}
 % \usepackage[sorting=none,giveninits=true]{biblatex}
-\usepackage[backend=biber]{biblatex}
+\usepackage[backend=bibtex]{biblatex}
 \addbibresource{config/bibliography.bib}
 
 % Rename list of figures and list of tables
