Update: bibliography merge completed

--- a/config/bibliography.bib
+++ b/config/bibliography.bib
@@ -443,14 +443,33 @@
   url      = {https://iss.oden.utexas.edu/?p=projects/galois/lonestargpu}
 }
 
-@link{,
-  author   = {},
-  title    = {},
+@link{EnergyStar,
+  author   = {ICR Polska},
+  title    = {EnergyStar - ICR POLAND - testing and certification},
   keywords = {Useful_Link},
-  url      = {}
-}@link{,
-  author   = {},
-  title    = {},
+  url      = {https://icrpolska.com/en/energystar/}
+}@link{SPEC,
+  author   = {SPEC},
+  title    = {SPECpower and Performance Committee},
   keywords = {Useful_Link},
-  url      = {}
+  url      = {https://www.spec.org/power/}
 }
+
+@link{IEC,
+  author   = {International Electrotechnical Commission},
+  title    = {IEC 62301:2011 | IEC Webstore | energy efficiency, smart city, standby power},
+  keywords = {Useful_Link},
+  url      = {https://webstore.iec.ch/publication/6789},
+  abstract = {IEC 62301:2011 specifies methods of measurement of electrical power consumption in standby mode(s) and other low power modes (off mode and network mode), as applicable. It is applicable to electrical products with a rated input voltage or voltage range that lies wholly or partly in the range 100 V a.c. to 250 V a.c. for single phase products and 130 V a.c. to 480 V a.c. for other products. The objective of this standard is to provide a method of test to determine the power consumption of a range of products in relevant low power modes (see 3.4), generally where the product is not in active mode (i.e. not performing a primary function). This standard does not specify safety requirements. It does not specify minimum performance requirements nor does it set maximum limits on power or energy consumption. This second edition cancels and replaces the first edition published in 2005 and constitutes a technical revision. The main changes from the previous edition are as follows:
+              - greater detail in set-up procedures and introduction of stability requirements for all measurement methods to ensure that results are as representative as possible;
+              - refinement of measurement uncertainty requirements for power measuring instruments, especially for more difficult loads with high crest factor and/or low power factor;
+              - updated guidance on product configuration, instrumentation and calculation of measurement uncertainty;
+              - inclusion of definitions for low power modes as requested by TC59 and use of these new definitions and more rigorous terminology throughout the standard;
+              - inclusion of specific test conditions where power consumption is affected by ambient illumination.}
+}@link{iTeh,
+  author   = {iTeh Standards},
+  title    = {Electrical and electronic household and office equipment - Measurement of low power consumption},
+  keywords = {Useful_Link},
+  url      = {https://standards.iteh.ai/catalog/standards/clc/371d2d67-a439-4f20-96f0-02675496fd03/en-50564-2011}
+}
+
