--- a/config/bibliography.bib
+++ b/config/bibliography.bib
@@ -224,7 +224,7 @@
   keywords = {Research_Paper},
   doi      = {10.1109/MM.2012.12},
   issn     = {1937-4143},
-  month    = {March}
+  month    = {03}
 }
 
 @inproceedings{RAPL_Power_Estimation_and_Capping,
@@ -239,7 +239,7 @@
   keywords  = {Research_Paper},
   doi       = {10.1145/1840845.1840883},
   issn      = {},
-  month     = {Aug}
+  month     = {08}
 }
 
 # [I need to check exact contents of this article and it's
@@ -259,7 +259,7 @@
   doi        = {10.1007/s11227-017-2141-4},
   abstract   = {Cloud environments today are increasingly featuring hybrid nodes containing multicore CPU processors and a diverse mix of accelerators such as Graphics Processing Units (GPUs), Intel Xeon Phi co-processors, and Field-Programmable Gate Arrays (FPGAs) to facilitate easier migration to them of HPC workloads. While virtualization of accelerators in clouds is a leading research challenge, we address the programming challenges that assail execution of large instances of data-parallel applications using these accelerators in this paper. In a typical hybrid node in a cloud, the tight integration of accelerators with multicore CPUs via PCI-E communication links contains inherent limitations such as limited main memory of accelerators and limited bandwidth of the PCI-E communication links. These limitations poses formidable programming challenges to execution of large problem sizes on these accelerators. In this paper, we describe a library containing interfaces (HCLOOC) that addresses these challenges. It employs optimal software pipelines to overlap data transfers between host CPU and the accelerator and computations on the accelerator. It is designed using the fundamental building blocks, which are OpenCL command queues for FPGAs, Intel offload streams for Intel Xeon Phis, and CUDA streams and events that allow concurrent utilization of the copy and execution engines provided in NVidia GPUs. We elucidate the key features of our library using an out-of-core implementation of matrix multiplication of large dense matrices on a hybrid node, an Intel Haswell multicore CPU server hosting three accelerators that includes NVidia K40c GPU, Intel Xeon Phi 3120P, and a Xilinx FPGA. Based on experiments with the GPU, we show that our out-of-core implementation achieves 82\% of peak double-precision floating performance of the GPU and a speedup of 2.7 times over the NVidia's out-of-core matrix multiplication implementation (CUBLAS-XT). We also demonstrate that our implementation exhibits 0\% drop in performance when the problem size exceeds the main memory of the GPU. We observe this 0\% drop also for our implementation for Intel Xeon Phi and Xilinx FPGA.},
   journal    = {J. Supercomput.},
-  month      = {feb},
+  month      = {02},
   pages      = {551-568},
   numpages   = {18},
   keywords   = {Research_Paper, Intel MKL, Heterogeneous clouds, CUDA, Intel Xeon Phi, GPU, CUBLAS, Matrix multiplication, Out-of-core}
@@ -287,7 +287,7 @@
   keywords  = {Research_Paper},
   doi       = {10.1109/SAAHPC.2012.26},
   issn      = {2166-515X},
-  month     = {July}
+  month     = {07}
 }
 
 @article{O(N)_Force_Calculation_Algorithm,
@@ -297,7 +297,7 @@
   doi       = {10.1006/jcph.2002.7026},
   url       = {https://doi.org/10.1006%2Fjcph.2002.7026},
   year      = {2002},
-  month     = {jun},
+  month     = {06},
   publisher = {Elsevier (BV)},
   volume    = {179},
   number    = {1},
@@ -310,14 +310,14 @@
   booktitle = {2012 IEEE International Symposium on Workload Characterization (IISWC)},
   title     = {A quantitative study of irregular programs on GPUs},
   year      = {2012},
+  month     = {11},
   volume    = {},
   number    = {},
   pages     = {141-151},
   abstract  = {GPUs have been used to accelerate many regular applications and, more recently, irregular applications in which the control flow and memory access patterns are data-dependent and statically unpredictable. This paper defines two measures of irregularity called control-flow irregularity and memory-access irregularity, and investigates, using performance-counter measurements, how irregular GPU kernels differ from regular kernels with respect to these measures. For a suite of 13 benchmarks, we find that (i) irregularity at the warp level varies widely, (ii) control-flow irregularity and memory-access irregularity are largely independent of each other, and (iii) most kernels, including regular ones, exhibit some irregularity. A program's irregularity can change between different inputs, systems, and arithmetic precision but generally stays in a specific region of the irregularity space. Whereas some highly tuned implementations of irregular algorithms exhibit little irregularity, trading off extra irregularity for better locality or less work can improve overall performance.},
   keywords  = {Research_Paper},
   doi       = {10.1109/IISWC.2012.6402918},
-  issn      = {},
-  month     = {Nov}
+  issn      = {}
 }
 
 # ===== EXTERNAL LINKS =====
