--- a/main.tex
+++ b/main.tex
@@ -33,7 +33,7 @@
 \include{chapters/03.tex}
 % \include{chapters/04.tex}
 % \include{chapters/05.tex}
-% \include{chapters/example.tex}
+\include{chapters/example.tex}
 
 % \printbibliography[title={References},heading=bibintoc]
 \printbibliography[title={Research papers}, heading=bibintoc, keyword={Research_Paper}]
