Full ToC, Re-named chapters, More warnings cleanup

--- a/config/bibliography.bib
+++ b/config/bibliography.bib
@@ -332,7 +332,7 @@
 
 # Link to GitHub repository with software used for controlling the Yokogawa WT310E Power Meter
 @link{GitHub_intel/yoko-tool,
-  author   = {Artem Bityutskiy, Antti Laakso, Helia Correia},
+  author   = {Bityutskiy, Artem and Laakso, Antti and Correia, Helia},
   title    = {Yokotool},
   keywords = {Useful_Link},
   url      = {https://github.com/intel/yoko-tool},
