--- a/main.tex
+++ b/main.tex
@@ -28,12 +28,13 @@
 
 % Include chapters one-by-one
 \include{chapters/introduction.tex}
-\include{chapters/01.tex}
-\include{chapters/02.tex}
-\include{chapters/03.tex}
-% \include{chapters/04.tex}
-% \include{chapters/05.tex}
-\include{chapters/example.tex}
+\include{chapters/01_Research_Goal.tex}
+\include{chapters/02_Theoretical_Background.tex}
+\include{chapters/03_Related_Work.tex}
+\include{chapters/04_Proposal_of_the_Solution.tex}
+\include{chapters/05_Experiments.tex}
+\include{chapters/06_Summary.tex}
+% \include{chapters/example.tex}
 
 % \printbibliography[title={References},heading=bibintoc]
 \printbibliography[title={Research papers}, heading=bibintoc, keyword={Research_Paper}]
