Even more warnings cleanup

--- a/config/bibliography.bib
+++ b/config/bibliography.bib
@@ -322,7 +322,7 @@
 
 # ===== EXTERNAL LINKS =====
 
-@link{NASA_Advanced_Supercomputing,
+@misc{NASA_Advanced_Supercomputing,
   author   = {NASA},
   title    = {NAS Parallel Benchmarks},
   keywords = {Useful_Link},
@@ -331,7 +331,7 @@
 }
 
 # Link to GitHub repository with software used for controlling the Yokogawa WT310E Power Meter
-@link{GitHub_intel/yoko-tool,
+@misc{GitHub_intel/yoko-tool,
   author   = {Bityutskiy, Artem and Laakso, Antti and Correia, Helia},
   title    = {Yokotool},
   keywords = {Useful_Link},
@@ -339,123 +339,123 @@
   abstract = {Command-line tool for controlling Yokogawa power meters in Linux}
 }
 
-@link{Energy_Consumption_of_ICT,
+@misc{Energy_Consumption_of_ICT,
   author   = {The Parliamentary Office of Science and Technology},
   title    = {Energy Consumption of ICT},
   keywords = {Useful_Link},
   url      = {https://researchbriefings.files.parliament.uk/documents/POST-PN-0677/POST-PN-0677.pdf}
 }
 
-@link{RAPL_Reporting,
+@misc{RAPL_Reporting,
   author   = {Intel},
   title    = {Running Average Power Limit Energy Reporting},
   keywords = {Useful_Link},
   url      = {https://www.intel.com/content/www/us/en/developer/articles/technical/software-security-guidance/advisory-guidance/running-average-power-limit-energy-reporting.html}
 }
 
-@link{NVML,
+@misc{NVML,
   author   = {NVIDIA},
   title    = {NVIDIA Management Library (NVML)},
   keywords = {Useful_Link},
   url      = {https://developer.nvidia.com/nvidia-management-library-nvml}
 }
 
-@link{Yokogawa_Producent_Page,
+@misc{Yokogawa_Producent_Page,
   author   = {Yokogawa},
   title    = {WT300E Digital Power Analyzer},
   keywords = {Useful_Link},
   url      = {https://tmi.yokogawa.com/solutions/products/power-analyzers/digital-power-meter-wt300e/#Documents-Downloads}
 }
 
-@link{Yokogawa_Meter_Series_Specifications,
+@misc{Yokogawa_Meter_Series_Specifications,
   author   = {Yokogawa},
   title    = {WT300E Series Digital Power Meter},
   keywords = {Useful_Link},
   url      = {https://cdn.tmi.yokogawa.com/1/2562/files/BUWT300E-01EN.pdf}
 }
 
-@link{NVML_Reference_Manual,
+@misc{NVML_Reference_Manual,
   author   = {NVIDIA},
   title    = {NVML API Reference Guide},
   keywords = {Useful_Link},
   url      = {https://docs.nvidia.com/deploy/nvml-api/index.html}
 }
 
-@link{Intel_Xeon_Phi_Coprocessor_Developer,
+@misc{Intel_Xeon_Phi_Coprocessor_Developer,
   author   = {Intel},
   title    = {Intel® Xeon Phi™ Coprocessor DEVELOPER'S QUICK START GUIDE},
   keywords = {Useful_Link},
   url      = {https://www.intel.com/content/dam/develop/external/us/en/documents/intel-xeon-phi-coprocessor-quick-start-developers-guide.pdf}
 }
 
-@link{NVIDIA_SMI,
+@misc{NVIDIA_SMI,
   author   = {NVIDIA},
   title    = {System Management Interface SMI},
   keywords = {Useful_Link},
   url      = {https://developer.nvidia.com/nvidia-system-management-interface}
 }
 
-@link{PAPI_CUDA,
+@misc{PAPI_CUDA,
   author   = {NVIDIA},
   title    = {PAPI CUDA Component},
   keywords = {Useful_Link},
   url      = {https://developer.nvidia.com/papi-cuda-component}
 }
 
-@link{Pthreads,
+@misc{Pthreads,
   author   = {Michael Kerrisk},
   title    = {Pthreads - Linux manual page},
   keywords = {Useful_Link},
   url      = {https://man7.org/linux/man-pages/man7/pthreads.7.html}
 }
 
-@link{OpenMP,
+@misc{OpenMP,
   author   = {OpenMP},
   title    = {OpenMP Reference Guides},
   keywords = {Useful_Link},
   url      = {https://www.openmp.org/resources/refguides/}
 }
 
-@link{NVIDIA_Parallel_Thread_Execution,
+@misc{NVIDIA_Parallel_Thread_Execution,
   author   = {NVIDIA},
   title    = {Parallel Thread Execution ISA Version 8.2},
   keywords = {Useful_Link},
   url      = {https://docs.nvidia.com/cuda/parallel-thread-execution/index.html}
 }
 
-@link{NVIDIA_NVCC,
+@misc{NVIDIA_NVCC,
   author   = {NVIDIA},
   title    = {NVIDIA CUDA Compiler Driver NVCC},
   keywords = {Useful_Link},
   url      = {https://docs.nvidia.com/cuda/cuda-compiler-driver-nvcc/}
 }
-@link{K20Power,
+@misc{K20Power,
   author   = {Martin Burtscher},
   title    = {K20Power v1.1},
   keywords = {Useful_Link},
   url      = {https://userweb.cs.txstate.edu/~burtscher/research/K20power/}
 }
 
-@link{LonestarGPU,
+@misc{LonestarGPU,
   author   = {ISS Group at the University of Texas},
   title    = {LonestarGPU},
   keywords = {Useful_Link},
   url      = {https://iss.oden.utexas.edu/?p=projects/galois/lonestargpu}
 }
 
-@link{EnergyStar,
+@misc{EnergyStar,
   author   = {ICR Polska},
   title    = {EnergyStar - ICR POLAND - testing and certification},
   keywords = {Useful_Link},
   url      = {https://icrpolska.com/en/energystar/}
-}@link{SPEC,
+}@misc{SPEC,
   author   = {SPEC},
   title    = {SPECpower and Performance Committee},
   keywords = {Useful_Link},
   url      = {https://www.spec.org/power/}
 }
 
-@link{IEC,
+@misc{IEC,
   author   = {International Electrotechnical Commission},
   title    = {IEC 62301:2011 | IEC Webstore | energy efficiency, smart city, standby power},
   keywords = {Useful_Link},
@@ -466,7 +466,7 @@
               - updated guidance on product configuration, instrumentation and calculation of measurement uncertainty;
               - inclusion of definitions for low power modes as requested by TC59 and use of these new definitions and more rigorous terminology throughout the standard;
               - inclusion of specific test conditions where power consumption is affected by ambient illumination.}
-}@link{iTeh,
+}@misc{iTeh,
   author   = {iTeh Standards},
   title    = {Electrical and electronic household and office equipment - Measurement of low power consumption},
   keywords = {Useful_Link},
