--- a/main.tex
+++ b/main.tex
@@ -27,7 +27,7 @@
 \include{misc/list-of-symbols.tex}
 
 % Include chapters one-by-one
-\include{chapters/introduction.tex}
+\include{chapters/00_Introduction.tex}
 \include{chapters/01_Research_Goal.tex}
 \include{chapters/02_Theoretical_Background.tex}
 \include{chapters/03_Related_Work.tex}
