--- a/config/bibliography.bib
+++ b/config/bibliography.bib
@@ -448,7 +448,9 @@
   title    = {EnergyStar - ICR POLAND - testing and certification},
   keywords = {Useful_Link},
   url      = {https://icrpolska.com/en/energystar/}
-}@misc{SPEC,
+}
+
+@misc{SPEC,
   author   = {SPEC},
   title    = {SPECpower and Performance Committee},
   keywords = {Useful_Link},
@@ -466,10 +468,25 @@
               - updated guidance on product configuration, instrumentation and calculation of measurement uncertainty;
               - inclusion of definitions for low power modes as requested by TC59 and use of these new definitions and more rigorous terminology throughout the standard;
               - inclusion of specific test conditions where power consumption is affected by ambient illumination.}
-}@misc{iTeh,
+}
+
+@misc{iTeh,
   author   = {iTeh Standards},
   title    = {Electrical and electronic household and office equipment - Measurement of low power consumption},
   keywords = {Useful_Link},
   url      = {https://standards.iteh.ai/catalog/standards/clc/371d2d67-a439-4f20-96f0-02675496fd03/en-50564-2011}
 }
 
+@misc{Linux_taskset,
+  author   = {Linux},
+  title    = {"taskset" - Linux manual page},
+  keywords = {Useful_Link},
+  url      = {https://man7.org/linux/man-pages/man1/taskset.1.html}
+}
+
+% {key,
+%   author   = {},
+%   title    = {},
+%   keywords = {Useful_Link},
+%   url      = {}
+% }
