--- a/config/bibliography.bib
+++ b/config/bibliography.bib
@@ -483,6 +483,13 @@
   keywords = {Useful_Link},
   url      = {https://man7.org/linux/man-pages/man1/taskset.1.html}
 }
+@misc{Horovod,
+  author   = {The Institute for Development and Resources in Intensive Scientific Computing},
+  title    = {Horovod: Multi-GPU and multi-node data parallelism},
+  keywords = {Useful_Link},
+  url      = {http://www.idris.fr/eng/jean-zay/gpu/jean-zay-gpu-hvd-tf-multi-eng.html}
+}
+
 
 % {key,
 %   author   = {},
