--- a/config/bibliography.bib
+++ b/config/bibliography.bib
@@ -483,17 +483,49 @@
   keywords = {Useful_Link},
   url      = {https://man7.org/linux/man-pages/man1/taskset.1.html}
 }
-@misc{Horovod,
+
+@misc{Horovod_IDRIS,
   author   = {The Institute for Development and Resources in Intensive Scientific Computing},
   title    = {Horovod: Multi-GPU and multi-node data parallelism},
   keywords = {Useful_Link},
   url      = {http://www.idris.fr/eng/jean-zay/gpu/jean-zay-gpu-hvd-tf-multi-eng.html}
 }
 
+@misc{Google_Machine_Learning_Crash_Course,
+  author   = {Google},
+  title    = {Machine Learning Crash Course with TensorFlow APIs},
+  keywords = {Useful_Links},
+  url      = {https://developers.google.com/machine-learning/crash-course}
+}
 
-% {key,
-%   author   = {},
-%   title    = {},
-%   keywords = {Useful_Link},
-%   url      = {}
-% }
+@misc{Kaggle,
+  author   = {Kaggle},
+  title    = {Kaggle: Your Machine Learning and Data Science Community},
+  keywords = {Useful_Links},
+  url      = {https://www.kaggle.com/}
+}
+
+@misc{Kaggle_Dataset,
+  author   = {Gerry Piosenka},
+  title    = {Birds 525 Species - Image Classification},
+  year     = {2023},
+  month    = {5},
+  keywords = {Useful_Links},
+  url      = {https://www.kaggle.com/datasets/gpiosenka/100-bird-species}
+}
+
+https://www.kaggle.com/datasets/gpiosenka/100-bird-species
+
+@misc{Horovod,
+  author   = {Uber Technologies},
+  title    = {Horovod documentation},
+  keywords = {Useful_Links},
+  url      = {https://horovod.readthedocs.io/en/latest/index.html/}
+}
+
+@misc{WattsUp_Quick_Reference_Guide,
+  author   = {Electronic Educational Devices},
+  title    = {WattsUp? Operators Manual},
+  keywords = {Useful_Links},
+  url      = {https://arcb.csc.ncsu.edu/~mueller/cluster/arc/wattsup/metertools-1.0.0/docs/meters/wattsup/manual.pdf}
+}
