--- a/tables/04_exec_times_of_OMP-CPP_kernels.tex
+++ b/tables/04_exec_times_of_OMP-CPP_kernels.tex
@@ -1,7 +1,7 @@
 \begin{table}[!ht]
     \centering
     \small
-    \caption{Execution times of OMP-CPP benchmarks}\label{tbl:table-label}
+    \caption{Execution times of OMP-CPP benchmarks}\label{tbl:OMP-CPP}
     \begin{tblr}{%
         hlines,%
         vlines,%
