--- a/tables/04_exec_times_of_OMP-CPP_kernels.tex
+++ b/tables/04_exec_times_of_OMP-CPP_kernels.tex
@@ -6,23 +6,23 @@
         hlines,%
         vlines,%
         row{1}={font=\bfseries},%
-        column{1}={halign=c},%
+        column{1,2,4,5}={halign=c},%
     }%
         Benchmark & Class size & Execution time [s] & Benchmark & Class size & Execution time [s] \\
-        IS & Class B & 0.35 & FT & Class B & 2.92 \\
-        IS & Class C & 1.25 & FT & Class C & 16.14 \\
-        IS & Class D & 37.53 & FT & Class D & 371 \\
+        IS & B & 0.35 & FT & B & 2.92 \\
+        IS & C & 1.25 & FT & C & 16.14 \\
+        IS & D & 37.53 & FT & D & 371 \\
 
-        EP & Class B & 3.06 & SP & Class B & 14.48 \\
-        EP & Class C & 11.96 & SP & Class C & (freezed) \\
-        EP & Class D & 177 & SP & Class D & (core dumped) \\
+        EP & B & 3.06 & CG & B & 7.77 \\
+        EP & C & 11.96 & CG & C & 27.2 \\
+        EP & D & 177 & CG & D & (freezed) \\
 
-        CG & Class B & 7.77 & BT & Class B & 15.82 \\
-        CG & Class C & 27.2 & BT & Class C & 55.182 \\
-        CG & Class D & (freezed) & BT & Class D & 1185 \\
+        MG & B & 2.32 & LU & B & 9.88 \\
+        MG & C & 17.459 & LU & C & 34.88 \\
+        MG & D & 185 & LU & D & 1111 \\
 
-        MG & Class B & 2.32 & LU & Class B & 9.88 \\
-        MG & Class C & 17.459 & LU & Class C & 34.88 \\
-        MG & Class D & 185 & LU & Class D & 1111 \\
+        SP & B & 14.48 & BT & B & 15.82 \\
+        SP & C & (freezed) & BT & C & 55.182 \\
+        SP & D & (core dumped) & BT & D & 1185 \\
     \end{tblr}
 \end{table}
