--- a/tables/04_exet_times_of_Horovod_Python_kernels.tex
+++ b/tables/04_exet_times_of_Horovod_Python_kernels.tex
@@ -6,19 +6,19 @@
         hlines,%
         vlines,%
         row{1}={font=\bfseries},%
-        column{1,2,4,5}={halign=c},%
+        column{1,2}={halign=c},%
     }%
-        Number of GPUs & Number of iteration & Execution time [s] \\
-        1 & 1 & time \\
-        1 & 3 & time \\
-        1 & 5 & time \\
+        Number of GPUs used & Number of training epochs & Execution time [s] & Test accuracy [\%] \\
+        1 & 1 & 124.2 & 88.99 \\
+        1 & 3 & 326.7 & 91.30 \\
+        1 & 5 & 528.6 & 91.59 \\
 
-        2 & 1 & time \\
-        2 & 3 & time \\
-        2 & 5 & time \\
+        2 & 1 & 72.2 & 87.9 \\
+        2 & 3 & 176.2 & 90.72 \\
+        2 & 5 & 280.9 & 92.46 \\
 
-        4 & 1 & time \\
-        4 & 3 & time \\
-        4 & 5 & time \\
+        4 & 1 & 48.5 & 86.81 \\
+        4 & 3 & 101.1 & 91.59 \\
+        4 & 5 & 155.3 & 93.91 \\
     \end{tblr}
 \end{table}
