Major update of Chapter 4

--- a/config/bibliography.bib
+++ b/config/bibliography.bib
@@ -197,6 +197,22 @@
   doi      = {10.15439/2018F177}
 }
 
+@inproceedings{Performance_Energy_Aware_Optimization_Czarnul,
+  author    = {Krzywaniak, Adam and Czarnul, Pawel},
+  editor    = {Wyrzykowski, Roman and Deelman, Ewa and Dongarra, Jack and Karczewski, Konrad"},
+  title     = {Performance/Energy Aware Optimization of Parallel Applications on GPUs Under Power Capping},
+  booktitle = {Parallel Processing and Applied Mathematics},
+  year      = {2020},
+  publisher = {Springer International Publishing},
+  address   = {Cham},
+  pages     = {123--133},
+  abstract  = {In the paper we present an approach and results from application of the modern power capping mechanism available for NVIDIA GPUs to the benchmarks such as NAS Parallel Benchmarks BT, SP and LU as well as cublasgemm-benchmark which are widely used for assessment of high performance computing systems' performance. Specifically, depending on the benchmarks, various power cap configurations are best for desired trade-off of performance and energy consumption. We present two: both energy savings and performance drops for same power caps as well as a normalized performance-energy consumption product. It is important that optimal configurations are often non-trivial i.e. are obtained for power caps smaller than default and larger than minimal allowed limits. Tests have been performed for two modern GPUs of Pascal and Turing generations i.e. NVIDIA GTX 1070 and NVIDIA RTX 2080 respectively and thus results can be useful for many applications with profiles similar to the benchmarks executed on modern GPU based systems.},
+  isbn      = {978-3-030-43222-5},
+  url       = {https://link-1springer-1com-100005d4u0098.han.bg.pg.edu.pl/chapter/10.1007/978-3-030-43222-5_11},
+}
+
+
+
 # Article about improving the energy efficiency of computing
 # Used in Introduction
 @article{Software_Methods_of_Energy_Efficiency,
