--- a/config/preamble.sty
+++ b/config/preamble.sty
@@ -148,3 +148,7 @@
 
 % Highlight table rows/columns with color
 \usepackage{color, colortbl}
+
+% Allows putting multiple figures on the same page
+\usepackage{subfigure}
+\usepackage{caption}
