Major update of Chapter 4

--- a/tables/04_benchmarks_sanna.tex
+++ b/tables/04_benchmarks_sanna.tex
@@ -5,7 +5,7 @@
     \begin{tblr}{
         hlines,
         vlines,
-        row{1}={font=\bfseries,halign=c}
+        row{1}={font=\bfseries,halign=c,bg=lightgray!30}
     }
                         & OMP-CPP   & OMP-CUDA  & OMP-CPP+OMP-CUDA \\
         Benchmark \#1    & bt.C      & lu.D      & bt.C+lu.D        \\
