--- a/tables/04_exet_times_of_Horovod_Python_kernels.tex
+++ b/tables/04_exet_times_of_Horovod_Python_kernels.tex
@@ -5,7 +5,7 @@
     \begin{tblr}{%
         hlines,%
         vlines,%
-        row{1}={font=\bfseries},%
+        row{1}={font=\bfseries,bg=lightgray!30},%
         column{1,2}={halign=c},%
     }%
         Number of GPUs used & Number of training epochs & Execution time [s] & Test accuracy [\%] \\
