--- a/tables/04_benchmarks_vinnana.tex
+++ b/tables/04_benchmarks_vinnana.tex
@@ -5,7 +5,7 @@
     \begin{tblr}{
         hlines,
         vlines,
-        row{1}={font=\bfseries,halign=c}
+        row{1}={font=\bfseries,halign=c,bg=lightgray!30}
     }
                         & MPI-Fortran   & Horovod-Python    & MPI-Fortran+Horovod-Python \\
         Benchmark \#1   & ep.D.x        & XCeption          & ep.D.x+XCeption               \\
