--- a/tables/04_exec_times_of_MPI-Fortran_kernels.tex
+++ b/tables/04_exec_times_of_MPI-Fortran_kernels.tex
@@ -5,10 +5,13 @@
     \begin{tblr}{%
         hlines,%
         vlines,%
-        row{1}={font=\bfseries},%
+        row{1}={font=\bfseries,bg=lightgray!30},%
         column{1,2,4,5}={halign=c},%
+        cell{4}{1-3}={bg=green!15},
+        cell{7}{1-3}={bg=green!15},
+        cell{9}{4-6}={bg=green!15}
     }%
-        Benchmark & Class size & Execution time [s] & Benchmark & Class size & Execution time [s] \\
+        Benchmark & Class size & Execution time [s] & \vline Benchmark & Class size & Execution time [s] \\
         IS & B & 0.18 & FT & B & 3.11 \\
         IS & C & 0.8 & FT & C & 13.83 \\
         IS & D & 17.02 & FT & D & 360.15 \\
