--- a/tables/04_exec_times_of_OMP-CPP_kernels.tex
+++ b/tables/04_exec_times_of_OMP-CPP_kernels.tex
@@ -5,10 +5,13 @@
     \begin{tblr}{%
         hlines,%
         vlines,%
-        row{1}={font=\bfseries},%
+        row{1}={font=\bfseries,bg=lightgray!30},%
         column{1,2,4,5}={halign=c},%
+        cell{4}{1-3}={bg=green!15},
+        cell{9}{4-6}={bg=green!15},
+        cell{12}{4-6}={bg=green!15}
     }%
-        Benchmark & Class size & Execution time [s] & Benchmark & Class size & Execution time [s] \\
+        Benchmark & Class size & Execution time [s] & \vline Benchmark & Class size & Execution time [s] \\
         IS & B & 0.35 & FT & B & 2.92 \\
         IS & C & 1.25 & FT & C & 16.14 \\
         IS & D & 37.53 & FT & D & 371 \\
