--- a/tables/04_exec_times_of_OMP-CUDA_kernels.tex
+++ b/tables/04_exec_times_of_OMP-CUDA_kernels.tex
@@ -5,10 +5,13 @@
     \begin{tblr}{%
         hlines,%
         vlines,%
-        row{1}={font=\bfseries},%
+        row{1}={font=\bfseries,bg=lightgray!30},%
         column{1,2,4,5}={halign=c},%
+        cell{6}{1-3}={bg=green!15},
+        cell{9}{4-6}={bg=green!15},
+        cell{12}{1-3}={bg=green!15}
     }%
-        Benchmark & Class size & Execution time [s] & Benchmark & Class size & Execution time [s] \\
+        Benchmark & Class size & Execution time [s] & \vline Benchmark & Class size & Execution time [s] \\
         IS & C & (too short) & FT & C & 6.63 \\
         IS & D & 15.33 & FT & D & (unsuccesful) \\
         IS & E & (not defined) & FT & E & (unsuccesful) \\
