--- a/tables/04_implementations.tex
+++ b/tables/04_implementations.tex
@@ -5,7 +5,7 @@
     \begin{tblr}{
         hlines,
         vlines,
-        row{1}={font=\bfseries,halign=c}
+        row{1}={font=\bfseries,halign=c,bg=lightgray!30}
     }
                 & sanna.kask        & vinnana.kask                  \\
         CPUs    & OMP-CPP           & MPI-Fortran                   \\
