--- a/config/preamble.sty
+++ b/config/preamble.sty
@@ -133,6 +133,7 @@
 \usepackage{listings}
 \usepackage{courier}
 \usepackage{xcolor}
+\lstset{showstringspaces=false}
 
 % If using a niche language, you might need to add a custom listing
 % definition for it in order to have colored syntax. To keep things
